--- a/styles/main.css
+++ b/styles/main.css
@@ -499,10 +499,11 @@ ul {
   border: none;
   border-radius: 0;
   text-transform: uppercase;
-  background-color: #D1A954;
+  background-color: #d1a954;
   color: #ffffff;
   cursor: pointer;
   transition: 0.3s;
+  font-size: 18px;
 }
 .button:hover {
   background-color: #b47c48;
@@ -1551,6 +1552,51 @@ iframe {
   background-color: rgba(58, 58, 58, 0.26);
   border-radius: 10px;
 }
+.calculation__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.calculation__label {
+  margin-top: 20px;
+}
+
+.calculation__input-file {
+  padding: 0;
+  margin-top: 10px;
+}
+
+input[type=file]::-webkit-file-upload-button {
+  margin-right: 20px;
+  border: none;
+  background: #363839;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+
+input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background: #363839;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+input[type=file]::-webkit-file-upload-button:hover {
+  opacity: 0.7;
+}
+
+input[type=file]::file-selector-button:hover {
+  opacity: 0.7;
+}
+
 .form-textarea {
   padding: 8px 10px;
   border-radius: 3px;
@@ -1568,113 +1614,6 @@ iframe {
   font-size: 14px;
 }
 
-.select {
-  position: relative;
-}
-
-.select__item {
-  position: relative;
-}
-
-.select__title {
-  color: #000;
-  border: 1px solid #d9d9d9;
-  background-color: #fff;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.select__value {
-  display: flex;
-  font-size: 16px;
-  height: 50px;
-  padding: 0px 20px;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row-reverse;
-}
-
-.select__value span {
-  height: 1em;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
-
-.select__value::before {
-  content: "";
-  display: inline-block;
-  transition: all 0.3s ease 0s;
-  width: 11px;
-  height: 7px;
-  background: url("../img/select.svg") center/100% no-repeat;
-}
-
-.select__options {
-  color: #fff;
-  display: none;
-  position: absolute;
-  top: 49px;
-  border-radius: 0 0 4px 4px;
-  min-width: 100%;
-  left: 0;
-  background-color: #fff;
-  border-top: 0;
-  border: 1px solid #d9d9d9;
-  border-top: 0;
-  font-size: 16px;
-  padding: 0px 0px 5px 0px;
-}
-
-.select__option {
-  cursor: pointer;
-  padding: 10px 20px;
-  margin: 0px 0px 0px 0px;
-}
-
-.select._active {
-  z-index: 5;
-}
-
-.select._active .select__value::before {
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
-}
-
-.select._active.select__options {
-  display: block;
-}
-
-.form {
-  max-width: 550px;
-  margin: 0px auto;
-  color: #fff;
-  padding: 10px 0;
-}
-
-.form__body {
-  position: relative;
-}
-
-.form__body::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(51, 51, 51, 0.9) url("../img/loading.gif") center/50px no-repeat;
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.5s ease 0s;
-}
-
-.form__body._sending::after {
-  opacity: 1;
-  visibility: visible;
-}
-
 .form__title {
   font-size: 40px;
   font-weight: 700;
@@ -1682,6 +1621,7 @@ iframe {
 }
 
 .form__item {
+  width: 100%;
   margin: 0px 0px 10px 0px;
 }
 
@@ -1693,11 +1633,11 @@ iframe {
 
 .form__input {
   height: 50px;
-  padding: 0px 20px;
   border-radius: 5px;
-  width: 90%;
+  width: 95%;
   font-size: 18px;
   transition: all 0.5s ease 0s;
+  overflow: visible;
 }
 
 .form__input:focus {
@@ -1787,8 +1727,9 @@ textarea.form__input {
   border-radius: 2px;
   justify-content: center;
   align-items: center;
-  background-color: #d1a954;
+  background-color: rgba(104, 104, 98, 0.8274509804);
   padding: 0px 20px;
+  font-size: 18px;
 }
 
 .file__preview {
@@ -1799,87 +1740,6 @@ textarea.form__input {
 
 .file__preview img {
   max-width: 100%;
-}
-
-.checkbox._error .checkbox__label::before {
-  box-shadow: 0 0 15px red;
-}
-
-.checkbox__input {
-  display: none;
-}
-
-.checkbox__input:checked + .checkbox__label::after {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-}
-
-.checkbox__label {
-  font-size: 16px;
-  line-height: 140%;
-  display: inline-flex;
-  align-items: center;
-  position: relative;
-  cursor: pointer;
-}
-
-.checkbox__label::before {
-  content: "";
-  align-self: flex-start;
-  flex: 0 0 24px;
-  height: 24px;
-  background-color: #000;
-  border-radius: 4px;
-  margin: 0px 10px 0px 0px;
-}
-
-.checkbox__label::after {
-  transition: -webkit-transform 0.5s ease 0s;
-  transition: transform 0.5s ease 0s;
-  transition: transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
-  content: "";
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  background-color: #7a956b;
-  border-radius: 4px;
-  -webkit-transform: scale(0);
-          transform: scale(0);
-}
-
-.checkbox__label a {
-  color: #7a956b;
-}
-
-.form__button {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 60px;
-  background-color: #7a956b;
-  color: #000;
-  font-size: 15px;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: 700;
-  cursor: pointer;
-  border-radius: 20px;
-  box-shadow: 0 5px 0 #161b13;
-  transition: background-color 0.5s ease 0s;
-  position: relative;
-  top: 0;
-}
-
-.form__button:hover {
-  background-color: #4f6146;
-}
-
-.form__button:active {
-  top: 3px;
-  box-shadow: 0 2px 0 #161b13;
 }
 
 .nav__social--desktop-wrap {
