--- a/styles/main.css
+++ b/styles/main.css
@@ -1625,6 +1625,10 @@ input[type=file]::file-selector-button:hover {
   margin: 0px 0px 10px 0px;
 }
 
+.form__none {
+  display: none;
+}
+
 .form__label {
   font-size: 18px;
   display: block;
