--- a/styles/main.css
+++ b/styles/main.css
@@ -1857,6 +1857,89 @@ textarea.form__input {
   color: rgba(0, 0, 0, 0.61);
 }
 
+.news {
+  color: black;
+  padding-bottom: 60px;
+}
+.news img {
+  width: 100%;
+}
+
+.news__box {
+  position: relative;
+}
+
+.news__container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news__blok {
+  position: relative;
+  background-color: #f6f6f6;
+  padding: 15px;
+  transition: all 0.35s ease-in-out 0s;
+  display: flex;
+  margin-bottom: 15px;
+}
+.news__blok svg {
+  fill: #404044;
+}
+.news__blok:hover {
+  background-color: #d1a954;
+  color: #f6f6f6;
+  transition: all 0.35s ease-in-out 0s;
+}
+.news__blok:hover svg {
+  fill: #f6f6f6; /* Зміна кольору SVG при наведенні */
+}
+
+.news__img {
+  display: none;
+  background-size: cover;
+}
+.news__img img {
+  height: 100%;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.news__content {
+  display: flex;
+  flex-direction: column;
+}
+
+.news__title {
+  font-size: 20px;
+  font-weight: 400;
+  margin: 0;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+.news__link {
+  color: #404044;
+  transition: all 0.35s ease-in-out 0s;
+}
+.news__link:hover {
+  color: #f6f6f6;
+  transition: all 0.35s ease-in-out 0s;
+}
+.news__link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.news__time {
+  position: relative;
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+
 .s-header {
   height: 450px;
 }
@@ -2401,6 +2484,30 @@ textarea.form__input {
   .ware__card {
     width: 47%;
   }
+  .news__blok:nth-of-type(2) {
+    direction: rtl;
+  }
+  .news__blok:nth-of-type(4) {
+    direction: rtl;
+  }
+  .news__blok {
+    padding: 0;
+    margin-bottom: 0;
+  }
+  .news__img {
+    display: block;
+    width: 50%;
+    float: right;
+  }
+  .news__content-container {
+    width: 50%;
+  }
+  .news__content {
+    padding: 15px;
+  }
+  .news__link {
+    margin-bottom: 0;
+  }
   .a-gallery__card {
     max-height: 200px;
   }
@@ -2840,6 +2947,15 @@ textarea.form__input {
   }
   .ware__box {
     margin-top: 40px;
+  }
+  .news__blok:nth-of-type(2) {
+    direction: ltr;
+  }
+  .news__blok:nth-of-type(3) {
+    direction: rtl;
+  }
+  .news__blok {
+    width: 50%;
   }
   .s-services {
     margin-top: 0;
