--- a/styles/main.css
+++ b/styles/main.css
@@ -1805,10 +1805,6 @@ textarea.form__input {
   margin: 0 auto;
   margin-bottom: 30px;
 }
-.ware__card:hover {
-  transition: all 0.35s ease-in-out;
-  box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
-}
 
 .ware__img {
   width: 100%;
@@ -1896,12 +1892,15 @@ textarea.form__input {
 
 .news__img {
   display: none;
-  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 .news__img img {
   height: 100%;
   max-width: 100%;
   vertical-align: middle;
+  object-fit: cover;
+  opacity: 0.9;
 }
 
 .news__content {
@@ -1910,7 +1909,7 @@ textarea.form__input {
 }
 
 .news__title {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
   margin: 0;
   letter-spacing: 1px;
@@ -1920,6 +1919,8 @@ textarea.form__input {
 .news__link {
   color: #404044;
   transition: all 0.35s ease-in-out 0s;
+  line-height: 1.2em;
+  font-size: 14px;
 }
 .news__link:hover {
   color: #f6f6f6;
@@ -2497,6 +2498,7 @@ textarea.form__input {
   .news__img {
     display: block;
     width: 50%;
+    height: 100%;
     float: right;
   }
   .news__content-container {
