--- a/styles/main.css
+++ b/styles/main.css
@@ -1343,6 +1343,8 @@ picture {
 
 .section--center-text {
   text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 50px;
 }
 
 .section--featured {
